获取列表使用清洗算法

--- a/serve/views/home.html
+++ b/serve/views/home.html
@@ -94,7 +94,7 @@
 			<br>
 			<div class="weui-footer">
 				<p class="weui-footer__text">无广告文章正文阅读工具</p>
-				<p class="weui-footer__text">个人作品，测试使用，请勿商用(商用查实必究！)</p>
+				<p class="weui-footer__text">个人作品，仅供测试使用</p>
 				<p class="weui-footer__text">本工具仅为文本阅读工具，请勿将本工具作代理使用</p>
 				<p class="weui-footer__text">使用本工具所展现内容，版权归原网站所有</p>
 				<p class="weui-footer__text"></p>
