--- a/serve/views/show.html
+++ b/serve/views/show.html
@@ -17,7 +17,18 @@
                 {{.Content}}
             </section>
         </article>
-		
+        
+        
+		<div class="page__bd page__bd_spacing">
+            <br>
+            <div class="weui-footer">
+                <p class="weui-footer__text">通过正文抓取提供转码，仅作测试用</p>
+                <p class="weui-footer__text">本工具仅为文本阅读工具，请勿将本工具作代理使用</p>
+                <p class="weui-footer__text">使用本工具所展现内容，版权归原网站所有</p>
+                <p class="weui-footer__text"></p>
+            </div>
+            <br>
+        </div>
     </body>
 </html>
 {{end}}
